--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,19 +2,20 @@ name: CI
 on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-dotnet@v4
-    - name: Build .net
-      working-directory: src
-      run: |
-        dotnet tool install --global dotnet-xscgen --version 2.1.1162
-        NS="Ariane.SaveFile.Contract"
-        mkdir $NS
-        pushd $NS
-        dotnet new classlib
-        rm -v *.cs
-        xscgen -n "=$NS" ../tmlu.xsd
-        dotnet pack /p:Version=0.0.1-preview1 -o artifacts
+  dotnet:
+    build:
+      runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-dotnet@v4
+      - name: Build .net
+        working-directory: src
+        run: |
+          dotnet tool install --global dotnet-xscgen --version 2.1.1162
+          NS="Ariane.SaveFile.Contract"
+          mkdir $NS
+          pushd $NS
+          dotnet new classlib
+          rm -v *.cs
+          xscgen -n "=$NS" ../tmlu.xsd
+          dotnet pack /p:Version=0.0.1-preview1 -o artifacts
